# pixpq

./: .gitignore  CMakeLists.txt  Dockerfile  docker-compose.yml
include/pixpq/: manager.hpp  notifier.hpp  pixpq.hh  pixpq.hpp  query.hpp  record.hpp
include/pixpq/sculpture/: fadecandy.hpp  manager.hh  pattern.hh  pattern.hpp  settings.hh  settings.hpp
include/pixpq/tracking/: location.hh  location.hpp  manager.hh
src/: manager.cpp  pixpq.cpp
src/sculpture/: fadecandy.cpp  manager.cpp  notifier.cpp  pattern.cpp  settings.cpp
src/tracking/: location.cpp  manager.cpp  notifier.cpp
tests/: tests.cpp
